fix: nav bar gap in small screens

--- a/_sass/components/nav-bar.scss
+++ b/_sass/components/nav-bar.scss
@@ -5,6 +5,7 @@
     overflow: auto;
     font-family: 'Neucha', cursive;
     font-size: 1.1em;
+    overflow: hidden;
 }
 
 .nav-home {
